--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,11 @@
 {
     "version": 2,
-    "builds": [{ "src": "api/quote.py", "use": "@vercel/python" }],
-    "routes": [{ "src": "/api/quote", "dest": "api/quote.py" }]
+    "builds": [
+      { "src": "api/quote.py", "use": "@vercel/python" },
+      { "src": "api/quote_all.py", "use": "@vercel/python" }
+    ],
+    "routes": [
+      { "src": "/api/quote", "dest": "api/quote.py" },
+      { "src": "/api/quote/all", "dest": "api/quote_all.py" }
+    ]
   }
